fix width images & hide text in covers

--- a/themes/siz/assets/css/screen.css
+++ b/themes/siz/assets/css/screen.css
@@ -879,8 +879,8 @@ body:not(.post-template) .post-title {
    the class is applied with jQuery */
 .post-content .img-inline {
     display: inline-block;
-    max-width: 100%;
-    height: 394px;
+    width: 100%;
+    height: auto;
     margin: 0 auto;
     padding: 0.6em 0;
 }
